--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ display: block;
   <p class="bio">I am a cryptocurrency enthusiast, basketball geek, and enjoy hearing people talk about their passions. Eager to learn and excited to meet like-minded people who will bring out the best in me.</p>
    
    </div>
-   <img id="catz"class="catphoto" src="https://lh3.googleusercontent.com/hrX8f52evmZYnTzNkS4pL43oMzzIBe36LP7vjiue3BJMN-do2CJrqcksOGHyHIfYHo16U2De7hTEqltlqg8sr5PS7piYSCQQnvMx7p-dSVqV7pJThnp7NZEzVhhO0yddJjl5AZbNZU1_VWqZE-KdCQ4H-p5JbOmcpa8O4d4JoSMpqKduj0sdnFa7v8K2RJroJHnSgypTplopFbo85RNt_MrCxqznYzLDf5PPs9M3c98wQ6SqBYs5LBUovTbj2sY-ABweMo1RlWwk7RFvw7lKO5RIfJUdoe1GHJ3oE9X2Hjs07hF8mRAyfTo220gP1kWvjQB-HD5BKFFbsESX3e0j8J3e-7OBsHjlc78x1ujeWKwoEsDfu0TKri8sgKrynm2VROUiBPqiqD8cAvXJmDtGV7_bNYqHB50XSp3XZxKOmJvyyrBMOhs1AG_o_dPEqwdc27stzL1xUAwnAb_ONgWyl6HP1jT_tsDcYstiY5sW2v5cIBkG3ikTNnNfJ6rixtPT1a6TbhuIAuz5m0d102q2Kd7hFfPX_st-GJtZ-kpbXe9ekAkkmzo7BC8SQcahnAwphxVBkwaeFPzMhtRMmv5U8TGrcwr7nITUE-aTPftqMRZ-HdA0TWCDxMRjG1pc4HhE08eVGmLdufOo5FPfY2yCc8uyU9vGuWmFonsERIuPQONBJHbY0oDEkp2J_dtEn4YkSMaHP7ICm5D5cn0WNzAycGg=w727-h969-no?authuser=0" alt="catphoto"> </img>
+   <img id="catz"class="catphoto" src="https://gdurl.com/MZep" alt="cat photo"> </img>
   
 
   </section>
